[package]
name = "mctest"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.49.0", features = [
    "rt",
    "fs",
    "macros",
    "net",
    "io-util",
    "rt-multi-thread",
] }
chrono = "0.4.43"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [
    "winit",
    "tokio",
    "iced_accessibility",
] }
socket2 = "0.6.1"
tokio-stream = "0.1.18"
